# quire

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  build.gradle.kts  gradle.properties  local.properties.template  renovate.json  settings.gradle.kts
server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  UPGRADING.md  alembic.ini  docker-compose.full.yml  docker-compose.yml  pyproject.toml  ruff.toml
server/caddy/: Caddyfile
server/fixtures/: identity
server/migrations/: README.md  env.py
server/migrations/versions/: 0001_initial.py  0002_ai_tables.py  0002_progress_finished_at.py  0003_ai_tables.py  0004_ai_insight_tone.py  ai_001_generation_log.py  ai_002_insight_language.py  ai_003_identity_aliases.py  ai_004_themes.py  ai_005_reader_profiles.py  ai_006_generation_log_profile.py  progress_001_library_items.py  progress_002_abandoned_at.py
server/opds_sync/: _env_compat.py  config.py  main.py
server/opds_sync/api/: ai.py  ai_auth.py  ai_schemas.py  health.py  library.py  library_schemas.py  progress.py
server/opds_sync/core/: logging_ctx.py
server/opds_sync/db/: models.py  session.py
server/quire_server/: _env_compat.py  config.py  main.py
server/quire_server/api/: ai.py  ai_auth.py  ai_schemas.py  health.py  library.py  library_schemas.py  progress.py
server/quire_server/core/: auth.py  identity.py  logging_ctx.py
server/quire_server/db/: models.py  session.py
server/scripts/: migrate.py
server/tests/: conftest.py
server/tests/integration/: conftest.py  test_ai_audit_log.py  test_ai_auth_modes.py  test_ai_endpoints.py  test_ai_health_endpoint.py  test_ai_insights_promote.py  test_ai_insights_sync.py  test_ai_profile_delete.py  test_book_themes.py  test_cache_key_audit.py  test_health.py  test_lazy_imports.py  test_library_items.py  test_library_stats.py  test_main_prompt_version_runtime.py  test_middleware_integration.py  test_migrate_env_compat.py  test_migrate_script.py  test_modes.py  test_progress.py  test_reader_profile.py  test_readyz_migration_state.py  test_schema.py
server/tests/unit/: conftest.py  test_auth.py  (+22 more)
(+243 files in other folders)
