[project]
name = "opds-sync"
version = "0.1.0"
description = "Quire sync server: progress + (later) annotations API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "python-json-logger>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "testcontainers[postgres]>=4.7",
    "ruff>=0.6",
    "cryptography>=43",
]

[tool.setuptools.packages.find]
include = ["quire_server*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "requires_progress: test exercises the /sync/v1 progress router and must skip when OPDS_SYNC_PROGRESS_ENABLED=false",
    "requires_ai: test exercises the /ai/v1 router and must skip when OPDS_SYNC_AI_ENABLED=false",
]
